--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,88 @@
+html{
+  overflow: hidden;
+  color: rgb(255, 255, 255);
+}
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#c{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
+  background-color: rgb(46, 46, 65);
+}
+.p{
+  width: 50%;
+  height: 100vh;
+}
+.e{
+  width: 50%;
+  height: 100vh;
+  border-right: 2px solid rgb(23, 32, 42);
+}
+#editor{
+  width: 100%;
+  height: 95%;
+  resize: none;
+  outline: none;
+  padding: 20px;
+  box-sizing: border-box;
+  border: none;
   color: white;
+  background-color: rgb(44, 62, 80);
 }
-
-.App-link {
-  color: #61dafb;
+#preview{
+  width: 100%;
+  height: 95%;
+  box-sizing: border-box;
+  padding: 20px;
+  overflow: auto;
+  display: flex;
+  text-align: left;
+  flex-direction:column;
+  background-color: rgb(44, 62, 80);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#preview :first-child{
+  margin: 0;
+}
+ul, ol{
+  text-align: left;
+}
+table,td,th{
+  text-align: center;
+  padding: 2px;
+  border-spacing: 0;
+  border: 1px solid black;
+  background-color: rgb(58, 80, 103);
+}
+img{
+  max-width: 100%;
+}
+a{
+  color: lightblue;
+}
+blockquote{
+  background-color: rgb(58, 80, 103);
+  padding: 5px 5px 5px 20px;
+  border-left:solid 5px rgb(35, 27, 62);
+  margin: 5%;
+}
+code, pre{
+  background-color: white;
+  color: black;
+  text-align: left;
+  font-family: monospace;
+}
+pre{
+  padding: 10px;
+  width: fit-content;
+}
+.toolbar{
+  height: 5%;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding-left: 10px;
+  border-bottom: 2px solid rgb(23, 32, 42);
+  overflow: hidden;
+  background-color: rgb(33, 47, 61);
 }
